.apex/unpackaged/objects/redwing__Achievement__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement Category</label>
        <referenceTo>redwing__Achievement_Category__c</referenceTo>
        <relationshipLabel>Achievements</relationshipLabel>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Acquired_Image__c</fullName>
        <label>Acquired Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Eligible_Image__c</fullName>
        <label>Eligible Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Launch the Achievement Print URL when clicking the Acquired Achievement</inlineHelpText>
        <label>Enable Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Expiration_Date__c</fullName>
        <inlineHelpText>Expired achievements will not be displayed in the users profile page</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the achievement won&apos;t be displayed in the user&apos;s profile page</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the achievement won&apos;t be displayed to external users</inlineHelpText>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Override_Completed_Status__c</fullName>
        <inlineHelpText>Overriding the completed status will make the Achievement Assignments go to the defined &quot;override status&quot; instead of &quot;Acquired&quot;. It&apos;s up to you move to the &quot;Acquired&quot;  status once this feature is used.</inlineHelpText>
        <label>Override Completed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Override_URL__c</fullName>
        <inlineHelpText>Specify a value if you want users to go to this URL when clicking the Achievement Image. This can be used to redirect to a custom page where you manage additional steps before changing the status of the Achievement to &quot;Acquired&quot;.</inlineHelpText>
        <label>Override URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Show_If_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option to show Achievement in Profile even when it&apos;s expired</inlineHelpText>
        <label>Show If Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Achievements</fullName>
                    <default>true</default>
                    <label>Achievements</label>
                </value>
                <value>
                    <fullName>Certifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Work_Badge_Giver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work.com Badge Giver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Work_Badge_Id__c</fullName>
        <label>Work.com Badge Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Work_Badge_Image_URL__c</fullName>
        <label>Work.com Badge Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Work_Badge_Message__c</fullName>
        <label>Work.com Badge Message</label>
        <type>TextArea</type>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Achievement_Category__c</columns>
        <columns>redwing__Type__c</columns>
        <columns>redwing__Expiration_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>